--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,5 +1,9 @@
 app:
     ui:
         edit_book: Edit book
+        edit_subscription: Edit subscription
         books: Books
+        library: Library
         new_book: New book
+        new_subscription: New subscription
+        subscriptions: Subscriptions
